# provisioner

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  windows.yml
examples/K8/: project.json  server.properties  whitelist.json
examples/K8/config/: fabric_loader_dependencies.json
examples/K8/mods/: anti-xray.pm  anvil-restoration.pm  appleskin.pm  architectury-api.pm  better-than-mending.pm  bluemap.pm  c2me-fabric.pm  chunky.pm  cloth-config.pm  clumps.pm  collective.pm  enchantment-compat.pm  essential-commands.pm  fabric-api.pm  fabric-language-kotlin.pm  fabric-permissions-api.pm  ferrite-core.pm  forge-config-api-port.pm  grind-enchantments.pm  infinite-trading.pm  invis-item-frame.pm  jade.pm  just-player-heads.pm  krypton.pm  lithium.pm  mineable-spawner.pm  mob-heads.pm  noexpensive.pm  noisium.pm  otterlib.pm  pal.pm  placeholder-api.pm  rei.pm  (+7 more)
examples/k8/: project.json
source/: Common.h  Globals.cpp  Globals.h  Main.cpp
source/commands/: AddCommand.cpp  AddCommand.h  CompileCommand.cpp  CompileCommand.h  ExportCommand.cpp  ExportCommand.h  IncludeCommand.cpp  IncludeCommand.h  ListCommand.cpp  ListCommand.h  ModifyCommand.cpp  ModifyCommand.h  NewCommand.cpp  NewCommand.h  RemoveCommand.cpp  RemoveCommand.h  SyncCommand.cpp  SyncCommand.h  UpdateCommand.cpp  UpdateCommand.h
source/loader/: Fabric.cpp  Fabric.h  ILoader.h  Neoforge.cpp  Neoforge.h
source/platform/: IPlatform.h  Modrinth.cpp  Modrinth.h
source/project/: Project.cpp  Project.h  ProjectData.h
source/utils/: File.h  Json.h  Prompt.h  String.h
(+9 files in other folders)
